--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,13 +31,42 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-and-push
     steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Install kubectl
+        uses: azure/setup-kubectl@v4
+        with:
+          version: 'latest'
+
       - name: Setup Kubeconfig
+        shell: bash
         run: |
-          mkdir -p $HOME/.kube
-          echo "${{ secrets.KUBECONFIG }}" > $HOME/.kube/config
+          mkdir -p "$HOME/.kube"
+          cat > "$HOME/.kube/config" <<'EOF'
+          ${{ secrets.KUBECONFIG }}
+          EOF
 
       - name: Deploy Postgres (if not exists)
         run: kubectl apply -f k8s/postgres.yaml
 
-      - name: Deploy App (SimpleApp + Migrations + Ingress)
+      - name: Wait for Postgres ready
+        run: kubectl rollout status statefulset/postgres -n default --timeout=180s
+
+      - name: Deploy App (Secret + Migrations + Deployment + Service + Ingress)
         run: kubectl apply -f k8s/simpleapp.yaml
+
+      - name: Wait for migrations to complete
+        run: |
+          sleep 5
+          kubectl wait --for=condition=complete job/simpleapp-migrate -n default --timeout=180s || \
+            (echo "Migrations job did not complete" && kubectl logs job/simpleapp-migrate -n default && exit 1)
+
+      - name: Wait for app rollout
+        run: kubectl rollout status deployment/simpleapp -n default --timeout=180s
+
+      - name: Show Ingress and endpoints
+        run: |
+          kubectl get ingress -n default
+          kubectl get svc -n default
+          kubectl get pods -o wide -n default
