--- a/k8s/simpleapp.yaml
+++ b/k8s/simpleapp.yaml
@@ -3,34 +3,40 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: simpleapp-db-secret
-  namespace: default
 type: Opaque
 stringData:
-  DATABASE_URL: "postgres://postgres:Zxcvbnm123@postgres:5432/simpleapp?sslmode=disable"
+  url: "postgres://myuser:Zxcvbnm123@postgres:5432/simpleapp?sslmode=disable"
+
 ---
 apiVersion: batch/v1
 kind: Job
 metadata:
   name: simpleapp-migrate
-  namespace: default
 spec:
+  backoffLimit: 3
   template:
     spec:
       restartPolicy: Never
+      initContainers:
+        - name: wait-for-postgres
+          image: busybox
+          command: ['sh', '-c', 'until nc -z postgres 5432; do echo waiting for postgres; sleep 2; done;']
       containers:
-      - name: migrate
-        image: almuko/simpleapp:latest
-        command: ["goose", "-dir", "./migrations", "postgres", "$(DATABASE_URL)", "up"]
-        envFrom:
-        - secretRef:
-            name: simpleapp-db-secret
-  backoffLimit: 1
+        - name: migrate
+          image: almuko/simpleapp:latest
+          command: ["sh", "-c", "goose -dir ./migrations postgres \"$DATABASE_URL\" up"]
+          env:
+            - name: DATABASE_URL
+              valueFrom:
+                secretKeyRef:
+                  name: simpleapp-db-secret
+                  key: url
+
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: simpleapp
-  namespace: default
 spec:
   replicas: 1
   selector:
@@ -42,48 +48,51 @@ spec:
         app: simpleapp
     spec:
       containers:
-      - name: simpleapp
-        image: almuko/simpleapp:latest
-        ports:
-        - containerPort: 8080
-        envFrom:
-        - secretRef:
-            name: simpleapp-db-secret
+        - name: app
+          image: almuko/simpleapp:latest
+          ports:
+            - containerPort: 8080
+          env:
+            - name: DATABASE_URL
+              valueFrom:
+                secretKeyRef:
+                  name: simpleapp-db-secret
+                  key: url
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: simpleapp
-  namespace: default
 spec:
   selector:
     app: simpleapp
   ports:
-  - port: 80
-    targetPort: 8080
+    - port: 80
+      targetPort: 8080
   type: ClusterIP
+
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: simpleapp-ingress
-  namespace: default
   annotations:
-    cert-manager.io/cluster-issuer: "letsencrypt-prod"   # ⬅️ cert-manager будет выпускать сертификаты
+    kubernetes.io/ingress.class: nginx
+    cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
-  ingressClassName: traefik
   tls:
-  - hosts:
-    - simpleapp.compnet.kz
-    secretName: simpleapp-tls
+    - hosts:
+        - simpleapp.compnet.kz
+      secretName: simpleapp-tls
   rules:
-  - host: simpleapp.compnet.kz
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: simpleapp
-            port:
-              number: 80
+    - host: simpleapp.compnet.kz
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: simpleapp
+                port:
+                  number: 80
