--- a/k8s/postgres.yaml
+++ b/k8s/postgres.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: v1
 kind: Secret
 metadata:
@@ -6,7 +5,9 @@ metadata:
   namespace: default
 type: Opaque
 stringData:
-  password: Zxcvbnm123
+  POSTGRES_USER: postgres
+  POSTGRES_PASSWORD: Zxcvbnm123
+  POSTGRES_DB: simpleapp
 ---
 apiVersion: apps/v1
 kind: StatefulSet
@@ -25,31 +26,24 @@ spec:
         app: postgres
     spec:
       containers:
-      - name: postgres
-        image: postgres:17
-        ports:
-        - containerPort: 5432
-        env:
-        - name: POSTGRES_DB
-          value: simpleapp
-        - name: POSTGRES_USER
-          value: postgres
-        - name: POSTGRES_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: postgres-secret
-              key: password
-        volumeMounts:
-        - name: postgres-data
-          mountPath: /var/lib/postgresql/data
+        - name: postgres
+          image: postgres:17
+          ports:
+            - containerPort: 5432
+          envFrom:
+            - secretRef:
+                name: postgres-secret
+          volumeMounts:
+            - name: postgres-data
+              mountPath: /var/lib/postgresql/data
   volumeClaimTemplates:
-  - metadata:
-      name: postgres-data
-    spec:
-      accessModes: [ "ReadWriteOnce" ]
-      resources:
-        requests:
-          storage: 1Gi
+    - metadata:
+        name: postgres-data
+      spec:
+        accessModes: [ "ReadWriteOnce" ]
+        resources:
+          requests:
+            storage: 1Gi
 ---
 apiVersion: v1
 kind: Service
@@ -60,6 +54,6 @@ spec:
   selector:
     app: postgres
   ports:
-  - port: 5432
-    targetPort: 5432
+    - port: 5432
+      targetPort: 5432
   type: ClusterIP
