--- a/k8s/simpleapp.yaml
+++ b/k8s/simpleapp.yaml
@@ -1,17 +1,9 @@
 ---
-apiVersion: v1
-kind: Secret
-metadata:
-  name: simpleapp-db-secret
-type: Opaque
-stringData:
-  url: "postgres://myuser:Zxcvbnm123@postgres:5432/simpleapp?sslmode=disable"
-
----
 apiVersion: batch/v1
 kind: Job
 metadata:
   name: simpleapp-migrate
+  namespace: default
 spec:
   backoffLimit: 3
   template:
@@ -20,23 +12,34 @@ spec:
       initContainers:
         - name: wait-for-postgres
           image: busybox
-          command: ['sh', '-c', 'until nc -z postgres 5432; do echo waiting for postgres; sleep 2; done;']
+          command:
+            - sh
+            - -c
+            - |
+              until nc -z postgres 5432; do
+                echo "⏳ waiting for postgres..."
+                sleep 2
+              done
+              echo "✅ postgres is up!"
       containers:
         - name: migrate
           image: almuko/simpleapp:latest
-          command: ["sh", "-c", "goose -dir ./migrations postgres \"$DATABASE_URL\" up"]
+          command:
+            - sh
+            - -c
+            - goose -dir ./migrations postgres "$DATABASE_URL" up
           env:
             - name: DATABASE_URL
-              valueFrom:
-                secretKeyRef:
-                  name: simpleapp-db-secret
-                  key: url
-
+              value: postgres://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@postgres:5432/$(POSTGRES_DB)?sslmode=disable
+          envFrom:
+            - secretRef:
+                name: postgres-secret
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: simpleapp
+  namespace: default
 spec:
   replicas: 1
   selector:
@@ -48,22 +51,22 @@ spec:
         app: simpleapp
     spec:
       containers:
-        - name: app
+        - name: simpleapp
           image: almuko/simpleapp:latest
           ports:
             - containerPort: 8080
           env:
             - name: DATABASE_URL
-              valueFrom:
-                secretKeyRef:
-                  name: simpleapp-db-secret
-                  key: url
-
+              value: postgres://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@postgres:5432/$(POSTGRES_DB)?sslmode=disable
+          envFrom:
+            - secretRef:
+                name: postgres-secret
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: simpleapp
+  namespace: default
 spec:
   selector:
     app: simpleapp
@@ -71,14 +74,14 @@ spec:
     - port: 80
       targetPort: 8080
   type: ClusterIP
-
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: simpleapp-ingress
+  namespace: default
   annotations:
-    kubernetes.io/ingress.class: nginx
+    kubernetes.io/ingress.class: traefik
     cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
   tls:
