--- a/k8s/postgres.yaml
+++ b/k8s/postgres.yaml
@@ -2,24 +2,18 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: postgres-secret
+  namespace: default
 type: Opaque
 stringData:
   POSTGRES_USER: postgres
   POSTGRES_PASSWORD: Zxcvbnm123
   POSTGRES_DB: simpleapp
 ---
-apiVersion: v1
-kind: Secret
-metadata:
-  name: simpleapp-db-secret
-type: Opaque
-stringData:
-  url: postgres://postgres:Zxcvbnm123@postgres:5432/simpleapp?sslmode=disable
----
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: postgres
+  namespace: default
 spec:
   serviceName: "postgres"
   replicas: 1
@@ -33,7 +27,7 @@ spec:
     spec:
       containers:
         - name: postgres
-          image: postgres:17
+          image: postgres:17-alpine
           ports:
             - containerPort: 5432
           envFrom:
@@ -42,12 +36,11 @@ spec:
           volumeMounts:
             - name: postgres-data
               mountPath: /var/lib/postgresql/data
-              subPath: postgres
   volumeClaimTemplates:
     - metadata:
         name: postgres-data
       spec:
-        accessModes: ["ReadWriteOnce"]
+        accessModes: [ "ReadWriteOnce" ]
         resources:
           requests:
             storage: 1Gi
@@ -56,9 +49,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: postgres
+  namespace: default
 spec:
+  selector:
+    app: postgres
   ports:
     - port: 5432
       targetPort: 5432
-  selector:
-    app: postgres
