--- a/k8s/simpleapp.yaml
+++ b/k8s/simpleapp.yaml
@@ -1,12 +1,3 @@
-apiVersion: v1
-kind: Secret
-metadata:
-  name: simpleapp-db-secret
-  namespace: default
-type: Opaque
-stringData:
-  url: "postgres://postgres:Zxcvbnm123@postgres:5432/simpleapp?sslmode=disable"
----
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -19,8 +10,16 @@ spec:
       restartPolicy: Never
       initContainers:
         - name: wait-for-postgres
-          image: busybox
-          command: ['sh', '-c', 'until nc -z postgres 5432; do echo waiting for postgres; sleep 2; done;']
+          image: appropriate/curl
+          command:
+            - sh
+            - -c
+            - |
+              until curl postgres:5432; do
+                echo "⏳ waiting for postgres..."
+                sleep 2
+              done
+              echo "✅ Postgres is up!"
       containers:
         - name: migrate
           image: almuko/simpleapp:latest
@@ -79,7 +78,12 @@ metadata:
   namespace: default
   annotations:
     kubernetes.io/ingress.class: traefik
+    cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
+  tls:
+    - hosts:
+        - simpleapp.compnet.kz
+      secretName: simpleapp-tls
   rules:
     - host: simpleapp.compnet.kz
       http:
