--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Install kubectl
         uses: azure/setup-kubectl@v4
         with:
-          version: 'latest'
+          version: latest
 
       - name: Setup Kubeconfig
         shell: bash
@@ -63,7 +63,8 @@ jobs:
       - name: Recreate simpleapp-db-secret
         run: |
           kubectl delete secret simpleapp-db-secret -n default --ignore-not-found
-          kubectl create secret generic simpleapp-db-secret             --from-literal=url='postgres://postgres:Zxcvbnm123@postgres:5432/simpleapp?sslmode=disable'
+          kubectl create secret generic simpleapp-db-secret \
+            --from-literal=DATABASE_URL='postgres://postgres:Zxcvbnm123@postgres:5432/simpleapp?sslmode=disable'
 
       - name: Cleanup old migration job and pods
         run: |
@@ -77,13 +78,15 @@ jobs:
           done
 
       - name: Deploy App (Migrations + Deployment + Service + Ingress)
-        run: kubectl apply -f k8s/simpleapp.yaml
+        run: |
+          kubectl apply -f k8s/migrate.yaml -n default
+          kubectl apply -f k8s/simpleapp.yaml -n default
 
       - name: Wait for migrations to complete
         run: |
           echo "⏳ Waiting for migrations to complete..."
           if ! kubectl wait --for=condition=complete job/simpleapp-migrate -n default --timeout=600s; then
-            echo "❌ Migrations job did not complete. Showing logs from all pods..."
+            echo "❌ Migration job did not complete. Showing logs from all pods..."
             for pod in $(kubectl get pods -n default -l job-name=simpleapp-migrate -o jsonpath='{.items[*].metadata.name}'); do
               echo "🔹 Logs from pod: $pod"
               kubectl logs -n default $pod || true
@@ -91,6 +94,7 @@ jobs:
             done
             exit 1
           fi
+          echo "✅ Migration job completed successfully."
 
       - name: Wait for app rollout
         run: kubectl rollout status deployment/simpleapp -n default --timeout=180s
@@ -98,7 +102,8 @@ jobs:
       - name: Wait for TLS certificate
         run: |
           echo "⏳ Waiting for TLS certificate simpleapp-tls..."
-          kubectl wait --for=condition=Ready certificate/simpleapp-tls -n default --timeout=300s ||             (echo "❌ TLS certificate was not issued" && kubectl describe certificate/simpleapp-tls -n default && exit 1)
+          kubectl wait --for=condition=Ready certificate/simpleapp-tls -n default --timeout=300s || \
+            (echo "❌ TLS certificate was not issued" && kubectl describe certificate simpleapp-tls -n default && exit 1)
 
       - name: Test API health endpoint
         run: |
